--- a/css/components/package.css
+++ b/css/components/package.css
@@ -45,6 +45,7 @@
     margin-right: 15px;
     width: 100% !important;
     height: 500px;
+    position: initial !important;
 }
 
 .package-list .card-header {
