--- a/css/components/contact.css
+++ b/css/components/contact.css
@@ -1,5 +1,5 @@
 #contact {
-    background: url('/images/bg02.jpeg');
+    background: url('../images/bg02.jpeg');
     background-size: cover;
     background-position: center center;
     -webkit-box-shadow: inset 10px 10px 5px 200px rgba(0, 0, 0, 0.3);
@@ -13,7 +13,7 @@
 }
 
 #contact-us {
-    background: url('/images/bg04.jpg');
+    background: url('../images/bg04.jpg');
     background-size: cover;
     background-position: center center;
     -webkit-box-shadow: inset 10px 10px 5px 80em rgba(0, 0, 0, 0.6);
