--- a/css/components/product.css
+++ b/css/components/product.css
@@ -12,7 +12,11 @@
     -moz-box-shadow: inset 10px 10px 5px 500px rgba(255, 255, 255, 0.8);
     box-shadow: inset 10px 10px 5px 500px rgba(255, 255, 255, 0.8);
 }
-
+#select-package{
+    background: url('../../images/bg07.png');
+    background-size: cover;
+    background-position: top center;
+}
 .nav-tabs .nav-link {
     border-radius: 200px;
     border: 4px solid #808080;
@@ -21,7 +25,27 @@
     margin: 0 auto;
 }
 
-.nav-tabs .nav-link img {
+.nav-tabs .nav-link.pack {
+    border-radius: 10px;
+    width: 100%;
+    height: auto;
+    padding: 25px;
+    margin: 0 auto;
+    font-size: 22px;
+    color: #fff;
+    border: 4px solid #444;
+    transition: all ease-in .2s
+}
+
+.nav-tabs .nav-link.pack.active{
+    background-color: transparent;
+    border: 4px solid #1cbcff;
+    width: 100%;
+    margin: 0 auto;
+    color: #1cbcff
+}
+
+.nav-tabs .nav-link i {
     padding-top: 10px;
 }
 
@@ -36,15 +60,47 @@
     border: 4px solid #1cbcff;
 }
 
-.nav-tabs .nav-link img {
+.nav-tabs .nav-link i {
     filter: contrast(0)
 }
 
-.nav-tabs .nav-link:hover img,
-.nav-tabs .nav-link.active img {
-    filter: contrast(1)
+.nav-tabs .nav-link:hover i,
+.nav-tabs .nav-link.active i {
+    filter: contrast(1);
+    color: #1cbcff;
 }
 
 .nav-tabs {
     border-bottom: none
+}
+
+
+.package-pro{
+    padding: 30px 100px;
+    border: 4px solid #444;
+    border-radius: 10px;
+}
+
+/* Medium devices (tablet, 768px and up) */
+
+@media screen and (min-width: 768px) {
+    .tab .tab-pane{
+        width: 70%;
+        margin: 0 auto;
+    }
+    .line-grid{
+        border-left: 4px solid #1cbcff;
+    }
+    .line-grid ul{
+        padding-left: 10px;
+    }
+}
+
+/* Large devices (desktop, 1024px and up) */
+
+@media screen and (min-width: 1024px) {
+    .tab .tab-pane{
+        width: 50%;
+        margin: 0 auto;
+    }
 }
