--- a/css/components/product.css
+++ b/css/components/product.css
@@ -77,7 +77,7 @@
 
 .package-pro{
     padding: 30px 50px;
-    border: 4px solid #444;
+    border: 4px solid #1cbcff;
     border-radius: 10px;
 }
 
