--- a/css/components/product.css
+++ b/css/components/product.css
@@ -76,9 +76,16 @@
 
 
 .package-pro{
-    padding: 30px 50px;
+    padding: 30px 40px;
     border: 4px solid #1cbcff;
     border-radius: 10px;
+}
+.col-md-4 ul {
+    list-style-type: none;
+}
+.col-md-4 ul li i{
+    /* margin-left: 5px; */
+    margin-right: 10px; 
 }
 
 /* Medium devices (tablet, 768px and up) */
